--- a/Melon/Melon.csproj
+++ b/Melon/Melon.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
-    <Version>3.1.2.0</Version>
+    <Version>3.2.0.0</Version>
     <LangVersion>9</LangVersion>
     <MelonRefs>true</MelonRefs>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -10,6 +10,20 @@
     <ItemGroup>
       <PackageReference Include="DotNetZip" Version="1.16.0" />
       <PackageReference Include="SixLabors.ImageSharp" Version="1.0.4" />
+    </ItemGroup>
+    <ItemGroup>
+      <Reference Include="Assembly-CSharp-firstpass">
+        <HintPath>F:\SteamLibrary\steamapps\common\Muse Dash\MelonLoader\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+        <Private>false</Private>
+      </Reference>
+      <Reference Include="PeroString">
+        <HintPath>F:\SteamLibrary\steamapps\common\Muse Dash\MelonLoader\Managed\PeroString.dll</HintPath>
+        <Private>false</Private>
+      </Reference>
+      <Reference Include="UnityEngine.UI">
+        <HintPath>F:\SteamLibrary\steamapps\common\Muse Dash\MelonLoader\Managed\UnityEngine.UI.dll</HintPath>
+        <Private>false</Private>
+      </Reference>
     </ItemGroup>
   <Import Project="$(MsBuildThisFileDirectory)/../ILRepack/ILRepack.Lib.MSBuild.Task.targets" />
   <Target Name="ILRepack" AfterTargets="Build">
